# charcoal

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TC-mingw.cmake  build-mingw.sh  build.ps1  build.sh  vcpkg.json
resources/shaders/: basic.frag.glsl  basic.vert.glsl
src/: app_info.h.in  app_state.h  main.cpp
src/engine/: app_state.h  color.cpp  color.h  config.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  shader_sources.h.in  texture.cpp  texture.h  time.cpp  time.h  vertex.cpp  vertex.h  window_utils.cpp  window_utils.h
src/engine/console/: command.h  console.h  convar.cpp
src/engine/gui/: debug_gui.cpp  debug_gui.h
src/engine/shader/: basic.frag.glsl  basic.vert.glsl
src/scenes/: triangle_scene.cpp  triangle_scene.h
